--- a/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
@@ -253,9 +253,7 @@ deployment:
   # -- Array of extra envs to be passed to the deployment. Kubernetes format is expected
   # - name: FOO
   #   value: BAR
-  extraEnv:
-    - secretRef:
-        name: kratos-secrets
+  extraEnv: []
 
   # -- If you want to mount external volume
   # For example, mount a secret containing Certificate root CA to verify database
