--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomizeconfig.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomizeconfig.yml
@@ -5,3 +5,15 @@ nameReference:
     fieldSpecs:
       - path: spec/valuesFrom/name
         kind: HelmRelease
+      - path: /spec/values/deployment/extraVolumes/name
+        kind: HelmRelease
+      - path: /spec/values/deployment/extraVolumes/configMap/name
+        kind: HelmRelease
+      - path: /spec/values/deployment/extraVolumeMounts/name
+        kind: HelmRelease
+      - path: /spec/values/statefulSet/extraVolumes/name
+        kind: HelmRelease
+      - path: /spec/values/statefulSet/extraVolumes/configMap/name
+        kind: HelmRelease
+      - path: /spec/values/statefulSet/extraVolumeMounts/name
+        kind: HelmRelease
