chore: run echo-server with hash also

--- a/kubernetes/hetzner-personal/helm-releases/kratos/kustomizeconfig.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/kustomizeconfig.yml
@@ -17,3 +17,5 @@ nameReference:
         kind: HelmRelease
       - path: /spec/values/statefulSet/extraVolumeMounts/name
         kind: HelmRelease
+      - path: /spec/values/deployment/extraContainers
+        kind: HelmRelease
