--- a/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/values.yml
@@ -277,20 +277,7 @@ deployment:
   #    image: ...
 
   # -- If you want to add extra sidecar containers.
-  extraContainers: |
-    - envFrom:
-        - configMapRef:
-            name: echo-server
-      image: ealen/echo-server:0.9.2
-      name: echo-server
-      ports:
-        - containerPort: 8080
-          name: http
-      securityContext:
-        capabilities:
-          drop:
-            - ALL
-        readOnlyRootFilesystem: true
+  extraContainers: ""
 
   # extraContainers: |
   #  - name: ...
