--- a/kubernetes/hetzner-personal/helm-releases/kratos/externalsecret.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kratos/externalsecret.yml
@@ -5,6 +5,9 @@ metadata:
 spec:
   data:
     - remoteRef:
+        key: /kratos/dsn
+      secretKey: DSN
+    - remoteRef:
         key: /kratos/courier/smtp/connection-uri
       secretKey: COURIER_SMTP_CONNECTION_URI
     - remoteRef:
