--- a/ansible/raspberry-pi/main.yml
+++ b/ansible/raspberry-pi/main.yml
@@ -52,3 +52,15 @@
     kubeconfig: /home/meysam/.kube/config
   vars_files:
     - ./vars.yml
+- become: true
+  gather_facts: false
+  hosts: raspberry
+  name: Configure K8s OIDC
+  roles:
+    - cluster-secret-store
+  tags:
+    - css
+  environment:
+    KUBECONFIG: /home/meysam/.kube/config
+  vars_files:
+    - ./vars.yml
