--- a/ansible/roles/cluster-secret-store/tasks/main.yml
+++ b/ansible/roles/cluster-secret-store/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Install boto3 and botocore
-  ansible.builtin.pip:
+  ansible.builtin.package:
     name:
-      - boto3
-      - botocore
+      - python3-boto3
+      - python3-botocore
     state: present
 - name: Initialize role arn
   when: role_arn is not defined
