--- a/kubernetes/raspberry-pi/external-secrets/helm-release.yml
+++ b/kubernetes/raspberry-pi/external-secrets/helm-release.yml
@@ -31,7 +31,7 @@ items:
       interval: 30m
       maxHistory: 10
       releaseName: external-secrets
-      targetNamespace: external-secrets
+      targetNamespace: flux-system
       test:
         enable: true
         ignoreFailures: true
