chore: move helm to their own directory

--- a/kubernetes/raspberry-pi/kustomization.yml
+++ b/kubernetes/raspberry-pi/kustomization.yml
@@ -1,8 +1,2 @@
-configMapGenerator:
-  - files:
-      - values.yaml=./external-secrets/values.yml
-    name: external-secrets-config
-    namespace: flux-system
-
 resources:
-  - external-secrets/helm-release.yml
+  - helm-releases/kustomize.yml
