chore: move kratos parent resources to flux-system

--- a/kubernetes/raspberry-pi/helm-releases/kratos/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kratos/release.yml
@@ -48,6 +48,7 @@ spec:
                   - --expose-metrics-port
                   - "4434"
   releaseName: kratos
+  targetNamespace: default
   test:
     enable: false
   timeout: 5m
