chore(kratos): move release back to the default namespace

--- a/kubernetes/raspberry-pi/helm-releases/kratos/kustomize.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kratos/kustomize.yml
@@ -11,5 +11,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  targetNamespace: flux-system
+  targetNamespace: default
   wait: false
