--- a/kubernetes/raspberry-pi/helm-releases/kratos/helm-values.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kratos/helm-values.yml
@@ -147,7 +147,7 @@ kratos:
     # When set to job, the migration will be executed as a job on release or upgrade.
     # When set to initContainer, the migration will be executed when Kratos pod is created
     # Defaults to job
-    type: job
+    type: initContainer
     # -- Ability to override the entrypoint of the automigration container
     # (e.g. to source dynamic secrets or export environment dynamic variables)
     customCommand: []
