--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ provider*.tf
 
 kubernetes/hetzner-personal/applications/listmonk/secrets.env
 kubernetes/hetzner-personal/applications/listmonk/.envrc
+.envrc
