--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,55 @@
 repos:
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.83.5
-    hooks:
-      - alias: fmt
-        id: terraform_fmt
-      # - alias: validate
-      #   id: terraform_validate
-      #   args:
-      #     - --tf-init-args=-upgrade
-      #     - --hook-config=--retry-once-with-cleanup=true
-      - alias: tflint
-        id: terraform_tflint
-        args:
-          - --args=--module
-      - id: terraform_tfsec
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
-      - id: trailing-whitespace
+      - id: check-added-large-files
+        args: ["--maxkb=800"]
+      - id: check-ast
       - id: check-executables-have-shebangs
-      - id: detect-aws-credentials
+      - id: check-json
+      - id: check-shebang-scripts-are-executable
+      - id: check-yaml
+        args:
+          - --allow-multiple-documents
       - id: detect-private-key
+      - id: detect-aws-credentials
       - id: end-of-file-fixer
-        exclude: .*kubernetes/raspberry-pi/mosquitto/password_file$
+      - id: name-tests-test
       - id: file-contents-sorter
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
+      - id: trailing-whitespace
+      - id: fix-byte-order-marker
+      - id: check-builtin-literals
+      - id: check-case-conflict
+      - id: check-builtin-literals
+      - id: check-byte-order-marker
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: check-toml
+      - id: check-vcs-permalinks
+      - id: check-xml
+      - id: debug-statements
+      - id: destroyed-symlinks
+      - id: fix-byte-order-marker
+      - id: fix-encoding-pragma
+      - id: forbid-new-submodules
+      - id: forbid-submodules
+      - id: mixed-line-ending
+      - id: pretty-format-json
+        args:
+          - --autofix
+  - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+    rev: v9.16.0
+    hooks:
+      - id: commitlint
+        stages: [commit-msg]
+        additional_dependencies: ["@commitlint/config-conventional"]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.8
+    hooks:
+      - id: ruff
+        args: [ --fix ]
+      - id: ruff-format
