chore(raspberry-pi): deploy prom-stack

--- a/kubernetes/raspberry-pi/gateway/externalsecret.yml
+++ b/kubernetes/raspberry-pi/gateway/externalsecret.yml
@@ -7,7 +7,7 @@ spec:
     - remoteRef:
         key: /cloudflare/api-token
       secretKey: cloudflareApiToken
-  refreshInterval: 5m
+  refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
     name: aws-parameter-store
