--- a/kubernetes/raspberry-pi/helm-releases/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kustomization.yml
@@ -15,3 +15,4 @@ resources:
   - external-secrets/helm-release.yml
   - cert-manager/release.yml
   - ./kratos/kustomize.yml
+  - ./prom-stack/kustomize.yml
