fix: separate alertmanager config from prom-stack

--- a/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
@@ -78,7 +78,10 @@ spec:
     coreDns:
       enabled: false
     grafana:
-      enabled: false
+      enabled: true
+      persistence:
+        enabled: true
+        size: 1Gi
     kubeApiServer:
       enabled: false
     kubeDns:
