chore(raspberry): install notifications stack

--- a/kubernetes/raspberry-pi/kustomization.yml
+++ b/kubernetes/raspberry-pi/kustomization.yml
@@ -2,3 +2,4 @@ resources:
   - helm-releases/kustomize.yml
   - gateway/kustomize.yml
   - applications/kustomize.yml
+  - ./notifications/kustomize.yml
