chore(raspberry-pi): deploy blackbox exporter and move kratos to auth

--- a/kubernetes/raspberry-pi/helm-releases/kratos/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kratos/kustomization.yml
@@ -8,6 +8,7 @@ configMapGenerator:
     name: kratos-config
 
 resources:
+  - namespace.yml
   - repository.yml
   - release.yml
   - externalsecret.yml
