--- a/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
@@ -8,7 +8,7 @@ spec:
       chart: kube-prometheus-stack
       sourceRef:
         kind: HelmRepository
-        name: kube-prometheus-stack
+        name: prometheus-community
       version: 60.x
   install:
     crds: Create
