--- a/kubernetes/raspberry-pi/monitoring/blackbox-exporter/kustomization.yml
+++ b/kubernetes/raspberry-pi/monitoring/blackbox-exporter/kustomization.yml
@@ -1,7 +1,10 @@
+configurations:
+  - kustomizeconfig.yml
+
 configMapGenerator:
   - name: blackbox-exporter-override
     files:
-      - blackbox.yaml:./blackbox-exporter-config.yml
+      - blackbox.yaml=./blackbox-exporter-config.yml
 
 resources:
   - release.yml
