--- a/kubernetes/raspberry-pi/monitoring/blackbox-exporter/release.yml
+++ b/kubernetes/raspberry-pi/monitoring/blackbox-exporter/release.yml
@@ -34,7 +34,7 @@ spec:
     extraConfigmapMounts:
       - configMap: blackbox-exporter-override
         defaultMode: 0444
-        mountPath: /etc/blackbox-exporter
+        mountPath: /etc/blackbox-exporter/
         name: blackbox-exporter-override
         readOnly: true
         subPath: blackbox.yaml
