fix: specify fullpath to mount point

--- a/kubernetes/raspberry-pi/monitoring/blackbox-exporter/release.yml
+++ b/kubernetes/raspberry-pi/monitoring/blackbox-exporter/release.yml
@@ -34,9 +34,8 @@ spec:
     extraConfigmapMounts:
       - configMap: blackbox-exporter-override
         defaultMode: 0444
-        mountPath: /etc/blackbox-exporter/
+        mountPath: /etc/blackbox-exporter/blackbox.yaml
         name: blackbox-exporter-override
         readOnly: true
-        subPath: blackbox.yaml
     service:
       port: 80
