fix(blackbox-exporter): specify query name to dns module

--- a/kubernetes/raspberry-pi/monitoring/blackbox-exporter/blackbox-exporter-config.yml
+++ b/kubernetes/raspberry-pi/monitoring/blackbox-exporter/blackbox-exporter-config.yml
@@ -1,11 +1,13 @@
 modules:
   dns_tcp:
     dns:
+      query_name: example.com
       transport_protocol: tcp
     prober: dns
     timeout: 5s
   dns_udp:
     dns:
+      query_name: example.com
       transport_protocol: udp
     prober: dns
     timeout: 5s
