chore: move blackbox to helm-releases

--- a/kubernetes/raspberry-pi/helm-releases/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kustomization.yml
@@ -16,3 +16,4 @@ resources:
   - cert-manager/release.yml
   - ./kratos/kustomize.yml
   - ./prom-stack/kustomize.yml
+  - ./blackbox-exporter/kustomize.yml
