--- a/kubernetes/raspberry-pi/helm-releases/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kustomization.yml
@@ -17,3 +17,4 @@ resources:
   - ./kratos/kustomize.yml
   - ./prom-stack/kustomize.yml
   - ./blackbox-exporter/kustomize.yml
+  - ./oathkeeper/kustomize.yml
