fix(oathkeeper): explicitly ask for ARM maester image

--- a/kubernetes/raspberry-pi/helm-releases/oathkeeper/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/oathkeeper/release.yml
@@ -33,3 +33,7 @@ spec:
     crds: CreateReplace
     remediation:
       remediateLastFailure: true
+  values:
+    maester:
+      image:
+        tag: v0.1.10-arm64
